--- a/src/app/pages/inbound-asm2/inbound-asm2.component.scss
+++ b/src/app/pages/inbound-asm2/inbound-asm2.component.scss
@@ -1057,9 +1057,9 @@ iframe {
     font-weight: 600;
     font-size: 10px;
     
-    &.factory-asm1 {
-      background-color: #e3f2fd !important;
-      color: #1976d2 !important;
+    &.factory-asm2 {
+      background-color: #fff3e0 !important;
+      color: #f57c00 !important;
     }
   }
   
